// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`package A on repo checker 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileName": "package.json",
  "passed": [
    "has-a-package-json-file",
    "package-json-has-a-schema-declaration",
    "package-json-has-a-bugs-property",
    "package-json-has-a-description-property",
    "package-json-has-a-files-property",
    "package-json-has-a-homepage-property",
    "package-json-has-a-keywords-property",
    "package-json-has-a-private-property",
    "package-json-has-a-repository-property",
    "package-json-has-a-author-property",
    "package-json-has-a-name-property",
    "package-json-has-a-version-property",
    "package-json-has-a-license-property",
    "package-json-has-a-gpl-3-0-license",
    "package-json-has-a-script-section",
    "package-json-has-a-pre-script-for-version-automation",
    "package-json-has-a-post-script-for-version-automation",
    "package-json-has-watchlist-eager-param",
    "package-json-has-pnpm-instead-of-npm-run",
    "package-json-has-a-check-script",
    "package-json-has-no-ci-script",
    "package-json-has-a-final-echo-for-task-build",
    "package-json-has-a-final-echo-for-task-check",
    "package-json-has-a-final-echo-for-task-lint",
    "package-json-has-a-final-echo-for-task-test",
    "package-json-has-no-sass-dependency-fat-useless",
    "package-json-has-no-cross-var-dependency-old-deprecated",
    "package-json-has-no-tslint-dependency-deprecated",
    "package-json-has-no-eslint-plugin-promise-5-dependency-require-eslint-7",
    "package-json-has-no-patch-precision",
    "package-json-one-unit-testing-dependency-from-vitest-mocha-uvu",
    "package-json-one-coverage-dependency-from-nyc-c8-v8",
    "package-json-has-no-fat-color-dependency-use-shuutils-or-nanocolors",
    "package-json-has-no-fat-fs-extra-dependency-use-native-fs",
    "package-json-has-no-utopian-shuunen-stack-dependency",
    "package-json-has-no-fat-slow-jsdom-dependency-use-happy-dom-instead",
    "package-json-has-no-fat-task-runner-use-pnpm-xyz-pnpm-abc-for-sequential-or-zero-deps-package-npm-parallel",
  ],
  "warnings": [
    "package-json-main-file-maximum-size-is-specified-in-data-file-ex-max-size-ko-100",
    "package-json-could-have-latest-version-of-repo-checker-like-repo-check-1-39-43m30m-fixable-39m49m",
  ],
}
`;

exports[`package B on ts project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "package-json-does-not-have-a-name-property-name",
    "package-json-does-not-have-a-gpl-3-0-license-license-gpl-3-0",
    "package-json-does-not-have-prepare-instead-of-prepublish-deprecated-prepublish",
  ],
  "fileContent": "{
  "author": "Michael Scott-Junior",
  "dependencies": {
    "esbuild-plugin-run": "latest",
    "typescript": "latest",
    "uvu": "0"
  },
  "description": "description",
  "license": "MIT",
  "main": "pathToMain",
  "scripts": {
    "build": "ts-node build.ts",
    "prepublish": "npm run build",
    "postversion": "npm publish",
    "start": "node pathToMain"
  },
  "type": "module",
  "version": "1.0.0"
}",
  "fileName": "package.json",
  "originalFileContent": "{
  "author": "Michael Scott-Junior",
  "dependencies": {
    "esbuild-plugin-run": "latest",
    "typescript": "latest",
    "uvu": "0"
  },
  "description": "description",
  "license": "MIT",
  "main": "pathToMain",
  "scripts": {
    "build": "ts-node build.ts",
    "prepublish": "npm run build",
    "postversion": "npm publish",
    "start": "node pathToMain"
  },
  "type": "module",
  "version": "1.0.0"
}",
  "passed": [
    "has-a-package-json-file",
    "package-json-has-a-description-property",
    "package-json-has-a-author-property",
    "package-json-has-a-version-property",
    "package-json-has-a-license-property",
    "package-json-has-a-script-section",
    "package-json-has-a-post-script-for-version-automation",
    "package-json-has-no-ci-script",
    "package-json-has-no-sass-dependency-fat-useless",
    "package-json-has-no-cross-var-dependency-old-deprecated",
    "package-json-has-no-tslint-dependency-deprecated",
    "package-json-has-no-eslint-plugin-promise-5-dependency-require-eslint-7",
    "package-json-has-no-patch-precision",
    "package-json-one-unit-testing-dependency-from-vitest-mocha-uvu",
    "package-json-assert-dependency-used-in-import-equal-from-uvu-assert-instead-works-also-as-deep-equal-alternative",
    "package-json-has-no-fat-color-dependency-use-shuutils-or-nanocolors",
    "package-json-has-no-fat-fs-extra-dependency-use-native-fs",
    "package-json-has-no-utopian-shuunen-stack-dependency",
    "package-json-has-no-fat-slow-jsdom-dependency-use-happy-dom-instead",
    "package-json-has-no-fat-task-runner-use-pnpm-xyz-pnpm-abc-for-sequential-or-zero-deps-package-npm-parallel",
  ],
  "warnings": [
    "package-json-main-file-maximum-size-is-specified-in-data-file-ex-max-size-ko-100",
    "package-json-could-have-a-schema-declaration-like-schema-https-json-schemastore-org-package-43m30m-fixable-39m49m",
    "package-json-could-have-a-bugs-property-bugs",
    "package-json-could-have-a-files-property-files-n",
    "package-json-could-have-a-homepage-property-homepage",
    "package-json-could-have-a-keywords-property-keywords-n",
    "package-json-could-have-a-private-property-private-falsetrue-n",
    "package-json-could-have-a-repository-property-repository-n",
    "package-json-could-have-a-pre-script-for-version-automation-like-preversion-pnpm-check",
    "package-json-could-have-pnpm-instead-of-npm-run-use-pnpm-instead-of-npm-run-for-performance-43m30m-fixable-39m49m",
    "package-json-could-have-a-check-script-like-check-pnpm-build-pnpm-lint",
    "package-json-could-have-a-final-echo-for-task-build-build-echo-wsbuild-w",
    "package-json-one-coverage-dependency-from-nyc-c8-v8",
    "package-json-could-have-latest-version-of-repo-checker-like-repo-check-1-39-43m30m-fixable-39m49m",
    "package-json-ts-node-without-transpile-only-detected-in-files-package-json",
    "package-json-could-have-not-fat-ts-runner-use-typescript-run-like-dev-ts-run-src-watch-or-ts-run-src-w-src-another-folder-not-fat-ts-runner-use-typescript-run-like-dev-ts-run-src-watch-or-ts-run-src-w-src-another-folder",
  ],
}
`;

exports[`package C ts project isUsing* 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": true,
    "isQuiet": true,
    "isUsingC8": true,
    "isUsingDependencyCruiser": true,
    "isUsingEslint": true,
    "isUsingNyc": false,
    "isUsingShuutils": true,
    "isUsingTailwind": true,
    "isUsingTypescript": true,
    "isUsingV8": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 0,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "package-json-has-a-path-to-main-file",
    "package-json-main-file-specified-in-package-json-path-to-main-exists-on-disk-be-sure-to-build-before-run-repo-check",
    "package-json-does-not-have-a-name-property-name",
    "package-json-does-not-have-a-gpl-3-0-license-license-gpl-3-0",
    "package-json-does-not-have-a-typescript-build-or-check-btscb",
    "package-json-does-not-have-prepare-instead-of-prepublish-deprecated-prepublish",
    "package-json-does-not-have-a-depcruise-usage-like-depcruise-src-config",
    "package-json-does-not-have-an-eslint-dependency-eslint",
    "package-json-does-not-have-a-types-field-in-exports-types-d-ts",
    "package-json-does-not-have-a-main-field-pointing-to-a-cjs-cjs-like-main-dist-index-cjs",
  ],
  "fileContent": "{
  "author": "Michael Scott-Junior",
  "dependencies": {
    "esbuild-plugin-run": "latest",
    "typescript": "latest",
    "uvu": "0"
  },
  "description": "description",
  "license": "MIT",
  "main": "pathToMain",
  "scripts": {
    "build": "ts-node build.ts",
    "prepublish": "npm run build",
    "postversion": "npm publish",
    "start": "node pathToMain"
  },
  "type": "module",
  "version": "1.0.0"
}",
  "fileName": "package.json",
  "originalFileContent": "{
  "author": "Michael Scott-Junior",
  "dependencies": {
    "esbuild-plugin-run": "latest",
    "typescript": "latest",
    "uvu": "0"
  },
  "description": "description",
  "license": "MIT",
  "main": "pathToMain",
  "scripts": {
    "build": "ts-node build.ts",
    "prepublish": "npm run build",
    "postversion": "npm publish",
    "start": "node pathToMain"
  },
  "type": "module",
  "version": "1.0.0"
}",
  "passed": [
    "has-a-package-json-file",
    "package-json-main-file-maximum-size-is-specified-in-data-file-ex-max-size-ko-100",
    "package-json-has-a-description-property",
    "package-json-has-a-author-property",
    "package-json-has-a-version-property",
    "package-json-has-a-license-property",
    "package-json-has-a-script-section",
    "package-json-has-a-post-script-for-version-automation",
    "package-json-has-no-ci-script",
    "package-json-has-no-sass-dependency-fat-useless",
    "package-json-has-no-cross-var-dependency-old-deprecated",
    "package-json-has-no-tslint-dependency-deprecated",
    "package-json-has-no-eslint-plugin-promise-5-dependency-require-eslint-7",
    "package-json-has-no-patch-precision",
    "package-json-one-unit-testing-dependency-from-vitest-mocha-uvu",
    "package-json-has-no-eslint8-dependency",
    "package-json-assert-dependency-used-in-import-equal-from-uvu-assert-instead-works-also-as-deep-equal-alternative",
    "package-json-has-no-fat-color-dependency-use-shuutils-or-nanocolors",
    "package-json-has-no-fat-fs-extra-dependency-use-native-fs",
    "package-json-has-no-utopian-shuunen-stack-dependency",
    "package-json-has-no-fat-slow-jsdom-dependency-use-happy-dom-instead",
    "package-json-has-no-fat-task-runner-use-pnpm-xyz-pnpm-abc-for-sequential-or-zero-deps-package-npm-parallel",
    "package-json-has-a-type-module-declaration-for-modern-practices",
  ],
  "warnings": [
    "package-json-could-have-a-schema-declaration-like-schema-https-json-schemastore-org-package-43m30m-fixable-39m49m",
    "package-json-could-have-a-bugs-property-bugs",
    "package-json-could-have-a-files-property-files-n",
    "package-json-could-have-a-homepage-property-homepage",
    "package-json-could-have-a-keywords-property-keywords-n",
    "package-json-could-have-a-private-property-private-falsetrue-n",
    "package-json-could-have-a-repository-property-repository-n",
    "package-json-could-have-a-pre-script-for-version-automation-like-preversion-pnpm-check",
    "package-json-could-have-a-unique-mark-task-like-mark-unique-mark-public-my-file-echo-mark-success",
    "package-json-could-have-pnpm-instead-of-npm-run-use-pnpm-instead-of-npm-run-for-performance-43m30m-fixable-39m49m",
    "package-json-could-have-a-check-script-like-check-pnpm-build-pnpm-lint",
    "package-json-could-have-a-final-echo-for-task-build-build-echo-wsbuild-w",
    "package-json-one-coverage-dependency-from-nyc-c8-v8",
    "package-json-could-have-latest-version-of-repo-checker-like-repo-check-1-39-43m30m-fixable-39m49m",
    "package-json-ts-node-without-transpile-only-detected-in-files-package-json",
    "package-json-could-have-not-fat-ts-runner-use-typescript-run-like-dev-ts-run-src-watch-or-ts-run-src-w-src-another-folder-not-fat-ts-runner-use-typescript-run-like-dev-ts-run-src-watch-or-ts-run-src-w-src-another-folder",
    "package-json-could-have-a-module-field-pointing-to-an-esm-mjs-like-module-dist-index-mjs",
    "package-json-could-have-a-exports-field-with-import-esm-mjs-require-cjs-cjs-like-exports-import-dist-index-mjs-require-dist-index-cjs",
  ],
}
`;

exports[`package D no file exists 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "",
  "fileName": "",
  "originalFileContent": "",
  "passed": [],
  "warnings": [],
}
`;

exports[`package E vue project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVue": true,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "package-json-does-not-have-a-author-property-author",
    "package-json-does-not-have-a-license-property-license",
    "package-json-does-not-have-a-script-section-scripts-n",
  ],
  "fileContent": "{
  "authors": "author",
  "bugs": "https://github.com/Kevin_Malone/recipes/issues",
  "dependencies": {
    "tailwindcss": "latest",
    "vue": "latest"
  },
  "description": "description",
  "name": "name",
  "version": "1.0.0"
}
",
  "fileName": "package.json",
  "originalFileContent": "{
  "authors": "author",
  "bugs": "https://github.com/Kevin_Malone/recipes/issues",
  "dependencies": {
    "tailwindcss": "latest",
    "vue": "latest"
  },
  "description": "description",
  "name": "name",
  "version": "1.0.0"
}
",
  "passed": [
    "has-a-package-json-file",
    "package-json-has-a-bugs-property",
    "package-json-has-a-description-property",
    "package-json-has-a-name-property",
    "package-json-has-a-version-property",
    "package-json-has-pnpm-instead-of-npm-run",
    "package-json-has-no-ci-script",
    "package-json-has-no-sass-dependency-fat-useless",
    "package-json-has-no-cross-var-dependency-old-deprecated",
    "package-json-has-no-tslint-dependency-deprecated",
    "package-json-has-no-eslint-plugin-promise-5-dependency-require-eslint-7",
    "package-json-has-no-patch-precision",
    "package-json-has-no-fat-color-dependency-use-shuutils-or-nanocolors",
    "package-json-has-no-fat-fs-extra-dependency-use-native-fs",
    "package-json-has-no-utopian-shuunen-stack-dependency",
    "package-json-has-no-fat-slow-jsdom-dependency-use-happy-dom-instead",
    "package-json-has-no-fat-task-runner-use-pnpm-xyz-pnpm-abc-for-sequential-or-zero-deps-package-npm-parallel",
  ],
  "warnings": [
    "package-json-could-have-a-schema-declaration-like-schema-https-json-schemastore-org-package-43m30m-fixable-39m49m",
    "package-json-could-have-a-files-property-files-n",
    "package-json-could-have-a-homepage-property-homepage",
    "package-json-could-have-a-keywords-property-keywords-n",
    "package-json-could-have-a-private-property-private-falsetrue-n",
    "package-json-could-have-a-repository-property-repository-n",
    "package-json-could-have-a-pre-script-for-version-automation-like-preversion-pnpm-check",
    "package-json-could-have-a-post-script-for-version-automation-like-postversion-git-push-git-push-tags",
    "package-json-could-have-a-check-script-like-check-pnpm-build-pnpm-lint",
    "package-json-one-unit-testing-dependency-from-vitest-mocha-uvu",
    "package-json-one-coverage-dependency-from-nyc-c8-v8",
    "package-json-could-have-latest-version-of-repo-checker-like-repo-check-1-39-43m30m-fixable-39m49m",
  ],
}
`;

exports[`package F fix project 1`] = `
{
  "canFix": true,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": true,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": true,
    "isUsingV8": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "does-not-have-a-author-property-author",
    "does-not-have-a-name-property-name",
    "does-not-have-a-version-property-version",
    "does-not-have-a-license-property-license",
    "does-not-have-a-typescript-build-or-check-btscb",
  ],
  "fileContent": "{
    "$schema": "https://json.schemastore.org/package",
    "devDependencies": {
      "@types/jest": "^26.0",
      "node": "14.14",
    },
    "scripts": {
      "eslint": "eslint --cache --ext .js,.ts,.vue src",
      "test": "pnpm jest",
    }
  }",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-a-package-json-file",
    "has-a-script-section",
    "has-no-ci-script",
    "has-no-sass-dependency-fat-useless",
    "has-no-cross-var-dependency-old-deprecated",
    "has-no-tslint-dependency-deprecated",
    "has-no-eslint-plugin-promise-5-dependency-require-eslint-7",
    "has-an-eslint-dependency",
    "has-no-eslint8-dependency",
    "has-no-eslint-ignore-flag-solution-1-just-remove-it-useless-most-of-the-time-check-debugeslint-cli-engine-npx-eslint-to-see-linted-files-or-solution-2-use-ignore-patterns-inside-eslintrc-json-the-objective-here-is-to-let-the-eslint-cli-vscode-eslint-use-the-same-config",
    "has-no-fat-color-dependency-use-shuutils-or-nanocolors",
    "has-no-fat-fs-extra-dependency-use-native-fs",
    "has-no-utopian-shuunen-stack-dependency",
    "has-no-fat-slow-jsdom-dependency-use-happy-dom-instead",
    "has-no-fat-task-runner-use-pnpm-xyz-pnpm-abc-for-sequential-or-zero-deps-package-npm-parallel",
  ],
  "warnings": [
    "could-have-a-bugs-property-bugs",
    "could-have-a-description-property-description",
    "could-have-a-files-property-files-n",
    "could-have-a-homepage-property-homepage",
    "could-have-a-keywords-property-keywords-n",
    "could-have-a-private-property-private-falsetrue-n",
    "could-have-a-repository-property-repository-n",
    "could-have-a-pre-script-for-version-automation-like-preversion-pnpm-check",
    "could-have-a-post-script-for-version-automation-like-postversion-git-push-git-push-tags",
    "could-have-a-check-script-like-check-pnpm-build-pnpm-lint",
    "one-unit-testing-dependency-from-vitest-mocha-uvu",
    "one-coverage-dependency-from-nyc-c8-v8",
  ],
}
`;
